--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html>
 <body>
     <head>
     <link href="css/move.css" rel="stylesheet" type="text/css">
@@ -20,3 +20,4 @@
 </ul>
 <script src="js/move.js" type="text/javascript"></script>
 </body>
+</html>
