--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <div id="myDIV" class="header">
   <h2>3 Monate vor dem Umzug</h2>
   <input type="text" id="myInput" placeholder="Title...">
-  <span onclick="newElement()" class="addBtn">Add</span>
+  <span  class="addBtn" id="#addBtn">Add</span>
 </div>
 
 <ul id="myUL">
