--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <div id="myDIV" class="header">
   <h2>3 Monate vor dem Umzug</h2>
-  <input type="text" id="myInput" placeholder="Title...">
+  <input type="text" id="myInput" placeholder="Bitte geben Sie den neuen Artikel in deutscher Sprache ein">
   <span  class="addBtn" id="addBtn">Add</span>
 </div>
 
