added module import

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <li>Offerten bei Umzugsunternehmen und/oder Reinigungsinstitut einholen</li>
     <li>Ggf. weitere Umzugshelfer organisieren</li>
   </ul>
+  <script type="module" src="/js/json/tasks.js"></script>
   <script src="js/move.js" type="text/javascript"></script>
 </body>
 
