--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
   </ul>
   <!-- <script type="module" src="/js/json/tasks.js"></script> -->
   <script src="js/move.js" type="text/javascript"></script>
+  <!-- <script type="module">
+    (async () => {
+      const moduleSpecifier = './js/json/tasks.js';
+      const module = await import(moduleSpecifier)
+     console.log(module.tasks);
+      // → logs 'Doing stuff…'
+    })();
+  </script> -->
 </body>
 
 </html>
