Introduced tasks controller

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <li>Ggf. weitere Umzugshelfer organisieren</li>
   </ul>
   <!-- <script type="module" src="/js/json/tasks.js"></script> -->
+  <script src="js/tasks.controller.js" type="text/javascript"></script>
   <script src="js/move.js" type="text/javascript"></script>
+ 
   <!-- <script type="module">
     (async () => {
       const moduleSpecifier = './js/json/tasks.js';
