--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
 
   <head>
     <link href="css/move.css" rel="stylesheet" type="text/css">
+    <script src="js/tasks.controller.js" type="text/javascript"></script>
+    <script src="js/move.js" type="text/javascript"></script>
   </head>
   <div id="myDIV" class="header">
     <h2>3 Monate vor dem Umzug</h2>
-    <input type="text" id="myInput" placeholder="Bitte geben Sie den neuen Artikel in deutscher Sprache ein">
+    <input type="text" id="myInput" placeholder="What needs to be done?">
     <span class="addBtn" id="addBtn">Add</span>
   </div>
 
@@ -21,8 +23,7 @@
     <li>Ggf. weitere Umzugshelfer organisieren</li>
   </ul>
   <!-- <script type="module" src="/js/json/tasks.js"></script> -->
-  <script src="js/tasks.controller.js" type="text/javascript"></script>
-  <script src="js/move.js" type="text/javascript"></script>
+ 
  
   <!-- <script type="module">
     (async () => {
