--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     })();
   </script> -->
   <script>
-    async function ready () {
+    function ready () {
       let todocontroller = new TasksController(document, window);
       window.parent.postMessage(todocontroller.getThreeMonthQuery());
       window.onmessage = (event) => {
@@ -42,7 +42,7 @@
                     let addButton = document.querySelector("#addBtn");
                     addButton.addEventListener("click", async () => await todocontroller.addItem());
                     console.log('data received in module', event);
-                   await todocontroller.init(event.data);
+                    todocontroller.init(event.data);
                 }
             };
      
