--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
           window.parent.postMessage({"type":"ready"}, "*");
 
           let todocontroller = new TasksController(document, window);
-          window.parent.postMessage({"query": {"key" : "days", "param": 90, "collectionName": "MovementTasks"}},"*");
+          window.parent.postMessage(JSON.parse({"query": {"key" : "days", "param": 90, "collectionName": "MovementTasks"}}),"*");
           window.onmessage = (event) => {
                     if (event.data) {
                         //Object.freeze(todocontroller);
